@@ -142,6 +142,9 @@
 // doug at hcsw.org
 // http://www.hcsw.org
 
+/*
+ * DNS Caching and ageing added by Eddie Bell ejlbell@gmail.com 2007
+ */
 
 // TODO:
 //
@@ -158,6 +161,7 @@
 #include <limits.h>
 #include <list>
 #include <vector>
+#include <algorithm>
 
 #include "nmap.h"
 #include "NmapOps.h"
@@ -267,6 +271,7 @@ struct request_s {
 struct host_elem_s {
   char *name;
   u32 addr;
+  u8 cache_hits;
 };
 
 
@@ -292,12 +297,12 @@ static ScanProgressMeter *SPM;
 //------------------- Prototypes and macros ---------------------
 
 static void put_dns_packet_on_wire(request *req);
+static char *lookup_etchosts(u32 ip);
+static void addto_etchosts(u32 ip, const char *hname);
 
 #define ACTION_FINISHED 0
 #define ACTION_CNAME_LIST 1
 #define ACTION_TIMEOUT 2
-
-
 
 //------------------- Misc code --------------------- 
 
@@ -370,7 +375,8 @@ static void do_possible_writes() {
       }
 
       if (tpreq) {
-        if (o.debugging >= TRACE_DEBUG_LEVEL) log_write(LOG_STDOUT, "mass_rdns: TRANSMITTING for <%s> (server <%s>)\n", tpreq->targ->targetipstr() , tpserv->hostname);
+        if (o.debugging >= TRACE_DEBUG_LEVEL)
+	   log_write(LOG_STDOUT, "mass_rdns: TRANSMITTING for <%s> (server <%s>)\n", tpreq->targ->targetipstr() , tpserv->hostname);
         stat_trans++;
         put_dns_packet_on_wire(tpreq);
       }
@@ -398,7 +404,6 @@ static void put_dns_packet_on_wire(request *req) {
   struct timeval now, timeout;
 
   ip = (u32) ntohl(req->targ->v4host().s_addr);
-
   packet[0] = (req->id >> 8) & 0xFF;
   packet[1] = req->id & 0xFF;
   plen += 2;
@@ -527,13 +532,18 @@ static int process_result(u32 ia, char *result, int action, u16 id) {
 
       if (id == tpreq->id) {
 
-        if (ia != 0 && (u32) (tpreq->targ->v4host().s_addr) != ia) continue;
+        if (ia != 0 && tpreq->targ->v4host().s_addr != ia)
+          continue;
 
         if (action == ACTION_CNAME_LIST || action == ACTION_FINISHED) {
         tpserv->capacity += CAPACITY_UP_STEP;
         check_capacities(tpserv);
 
-        if (result) tpreq->targ->setHostName(result);
+        if (result) {
+          tpreq->targ->setHostName(result);
+          addto_etchosts(tpreq->targ->v4hostip()->s_addr, result);
+        }
+
         tpserv->in_process.remove(tpreq);
         tpserv->reqs_on_wire--;
 
@@ -977,6 +987,7 @@ static void parse_etchosts(char *fname) {
         he = new host_elem;
         he->name = strdup(hname);
         he->addr = (u32) ia.s_addr;
+        he->cache_hits = 0;
         etchosts[he->addr % HASH_TABLE_SIZE].push_front(he);
       }
     }
@@ -1002,19 +1013,66 @@ void free_etchosts() {
   }
 }
 
+/* Executed when the DNS cache is full, ages entries
+ * and removes any with a cache hit of 0 (the least used) */
+bool remove_and_age(host_elem *host) {
+  if(host->cache_hits) {
+     host->cache_hits /=2;
+     return false;
+  } else
+     return true;
+}
 
+/* Add to the dns cache. If there is no space we age and 
+ * remove the least frequently used entries until there 
+ * is space */
+static void addto_etchosts(u32 ip, const char *hname) {
+  static u16 total_size = 0;
+  std::list<host_elem*>::iterator it;
+  host_elem *he;
+  int i;
+
+  if(lookup_etchosts(ip) != NULL) 
+    return;
+
+  while(total_size >= HASH_TABLE_SIZE) {
+    for(i = 0; i < HASH_TABLE_SIZE; i++) {
+      while((it = find_if(etchosts[i].begin(), etchosts[i].end(), remove_and_age)) != etchosts[i].end()) {
+        etchosts[i].erase(it);
+        total_size--;
+      }
+    }
+  }
+  he = new host_elem;
+  he->name = strdup(hname);
+  he->addr = ip;
+  he->cache_hits = 0;
+  etchosts[ip % HASH_TABLE_SIZE].push_back(he);
+  total_size++;
+}
+
+/* Search for a hostname in the cache and increment
+ * its cache hit counter if found */
 static char *lookup_etchosts(u32 ip) {
   std::list<host_elem *>::iterator hostI;
   host_elem *tpelem;
 
   for(hostI = etchosts[ip % HASH_TABLE_SIZE].begin(); hostI != etchosts[ip % HASH_TABLE_SIZE].end(); hostI++) {
     tpelem = *hostI;
-    if (tpelem->addr == ip) return tpelem->name;
+    if (tpelem->addr == ip) {
+      if(tpelem->cache_hits < UCHAR_MAX)
+        tpelem->cache_hits++;
+      return tpelem->name;
+    }
   }
-
   return NULL;
 }
 
+/* External interface to dns cache */
+const char *lookup_cached_host(u32 ip) {
+  const char *tmp = lookup_etchosts(ip);
+  return tmp==NULL?"":tmp;
+}
 
 static void etchosts_init(void) {
   static int initialized = 0;
@@ -1119,7 +1177,7 @@ static void nmap_mass_rdns_core(Target **targets, int num_targets) {
   for(hostI = targets; hostI < targets+num_targets; hostI++) {
     if (!((*hostI)->flags & HOST_UP) && !o.resolve_all) continue;
 
-    // See if it's in /etc/hosts
+    // See if it's in /etc/hosts or cached
     tpname = lookup_etchosts((u32) (*hostI)->v4hostip()->s_addr);
     if (tpname) {
       (*hostI)->setHostName(tpname);
